[tool.poetry]
name = "bot-trader-pancakeswap"
version = "0.1.0"
description = ""
authors = ["Govinda <govinda777@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.8.0"
aiohttp = "^3.11.12"
pydantic-settings = "^2.7.1"

[tool.poetry.dev-dependencies]  # Mudança aqui
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pre-commit = "^4.1.0"

# Pacote inclui
packages = [
    { include = "bot_trader_pancakeswap" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"